add order weight to give and list
